fix: book btn not showing on large tablet screen 2

--- a/sass/components/_card.sass
+++ b/sass/components/_card.sass
@@ -131,7 +131,7 @@
             font-weight: abstracts.get-fweight('medium')
 
     // card style for Tablet landscape
-    @include abstracts.respond(tab-land)
+    @media only screen and (max-width: 75em), only screen and (hover: none)
         height: auto
         background-color: abstracts.$white
         border-radius: 3px
